--- a/example/package.json
+++ b/example/package.json
@@ -25,7 +25,7 @@
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
-    "nestjs-pulsar": "0.0.3",
+    "nestjs-pulsar": "^0.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
