--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "dependencies": {
-    "pulsar-client": "^1.2.0"
-  },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
@@ -42,7 +39,8 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^7.5.1",
-    "@nestjs/core": "^7.5.1"
+    "@nestjs/core": "^7.5.1",
+    "pulsar-client": "^1.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
