--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/pulsar-client": "^1.2.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -40,7 +41,7 @@
   "peerDependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
-    "pulsar-client": "^1.2.0"
+    "pulsar-client": "^1.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -58,5 +59,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "dependencies": {
+    "@nestjs/common": "^7.6.17",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^7.6.17",
+    "pulsar-client": "^1.3.0"
   }
 }
